# OceanAI

./: .env  .gitattributes  .replit  Filtered_data_model1.ipynb  SIH2025-OceanAI - AquaMind.pptx  package-lock.json  package.json  pyproject.toml  replacements.txt  replit.md  tailwind.config.ts
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/design_reference/a5b90dde-238f-4e40-a257-001320b0a890/: fa8aa223-c64f-4f6a-b421-26d08c04ad0d.html
.local/state/replit/agent/filesystem/: filesystem_state.json
client/src/: App.tsx  index.css
client/src/Backend/: fish_stock_model.pkl  inspect_model.py  main.py  mock_response.json  predict_single.py  requirements.txt  validate_model.py
client/src/Backend/models/: oceanai_pipeline.pkl
client/src/components/: PhylogeneticTree.tsx  ProtectedRoute.tsx  footer.tsx  navigation.tsx  stat-card.tsx
client/src/components/charts/: fish-stocks-chart.tsx  ocean-temp-chart.tsx  species-diversity-chart.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: queryClient.ts  supabase.ts
client/src/pages/: about.tsx  ai-predictions.tsx  auth.tsx  fisheries-data.tsx  home.tsx  molecular-data.tsx  ocean-data.tsx
server/: gemini.ts  index.ts  marineKnowledge.ts  openai.ts  queryParser.ts  routes.ts  storage.ts
shared/: marineGazetteer.ts  schema.ts  speciesDictionary.ts
